--- a/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/values-b+es/strings.xml
+++ b/ProyectoFinalEvaluacin_PaulaPlazaGuirado/app/src/main/res/values-b+es/strings.xml
@@ -10,4 +10,5 @@
     <string name="permissionsL3">Dame los permisos</string>
     <string name="marcadorL">Nosotros</string>
     <string name="fragmentThere">Ya estás ahí</string>
+    <string name="IllegalArgumentException">Clase de modelo de vista desconocida</string>
 </resources>
